--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "d3-selection": "^1.4.1",
+    "eslint-plugin-react": "^7.20.0",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
@@ -19,8 +21,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-uuid": "^1.0.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
+  "proxy": "http://localhost:8081",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -41,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.1"
   }
 }
