--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.1"
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "react-test-renderer": "^16.13.1"
   }
 }
