changes to buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,23 +4,23 @@ phases:
   install: 
     commands: 
       # install node 12
-      - echo "Installing Node 12..."
+      - echo Installing Node 12...
       - curl -sL https: cinst nodejs.install
       # install yarn
-      - echo "Installing yarn..."
+      - echo Installing yarn...
       - choco install yarn
   pre_build: 
     commands: 
       # install dependencies
-      - echo "Installing yarn dependencies"
+      - echo Installing yarn dependencies
       - yarn
   build: 
     commands:
       # tests
-      - echo "Testing..."
+      - echo Testing...
       - yarn test
       # build
-      - echo "Building..."
+      - echo Building...
       - yarn build
 artifacts: 
   files: 
